新規登録、記録更新、更新ならずの際にランキング側にメッセージを表示

--- a/src/main/resources/templates/Ranking.html
+++ b/src/main/resources/templates/Ranking.html
@@ -39,6 +39,8 @@
 	   
 	</table>
 	<br>
+	<h2><span th:if="${msg != null}" th:text="${msg}" ></span></h2>
+	<br>
 	<br>
 	<br>
 	    <form method="get" th:action="@{/top}">
